@@ -7,6 +7,7 @@
 * Adding #49 SVT AV1 support (libsvtav1) directly with FFmpeg
 * Adding SVT AV1 dual pass, tier, scene detection, and tile parameters
 * Adding #67 Status Panel to view encoding logs
+* Adding #58 Support for cover attachments
 * Adding various speed improvements
 * Adding changelog in GUI
 * Adding #68 version upgrade dialogue
